src/test/ui/generator/yield-in-static.stderr
error[E0627]: yield statement outside of generator literal
  --> $DIR/yield-in-static.rs:3:18
   |
LL | static B: u8 = { yield 3u8; 3u8};
   |                  ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0627`.
